avoided overlapping

--- a/style.css
+++ b/style.css
@@ -73,32 +73,35 @@ img, embed, object, video {
 	cursor: pointer; cursor: hand; 
 }
 #game_area_right {
-	float:right;
+	float: right;
+	margin-left: 40%;
 	/* padding-left:3%; */
 }
 #choice{
 	clear: both;
 	padding-top: 10%;
-	margin-left: 10%;
+	margin-left: 30%;
 	text-align: center;
 }
 #play_area{
 	clear: both;
-	position: relative;
-	
+	margin-top: 40%;
+	position: absolute;
 }
 #cartoon img {
 	position: absolute;
 	padding-top: 3%;
 	padding-bottom: 3%;
 }
-.bestStreak{
+/* .bestStreak{
 	clear: left;
 	float: right;
-}
+} */
 #footer {
+	position: absolute;
 	display: block;
 	bottom:0;
+	margin-top: 10%;
     margin-left: auto;
     margin-right: auto;
 	width:100%;
